<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="hint_num1">Digite #1</string>
    <string name="hint_num2">Digite #2</string>
    <string name="op_sum">+</string>
    <string name="op_sub">-</string>
    <string name="op_mul">x</string>
    <string name="op_div">÷</string>
    <string name="error_empty">Debe ingresar ambos números</string>
    <string name="error_div_zero">El divisor no puede ser cero</string>
</resources>
